# DataStructs

./: .travis.yml  CMakeLists.txt  README.md
inc/: linked_list.h  node.h  type_name.h
src/: linked_list.c  main.c
test/: CMakeLists.txt  linked_list.cpp
